Sorted enemy wave creation and clicking on enemies to damage them